syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
  int32 first_name = 1;
  int32 second_name = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};
}